log
Sat 06 May 2023 06:15:00 AM UTC: 
 tests:  0|4
total_score: 0/70
043f7a7
Sat 06 May 2023 06:20:47 AM UTC: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
9b2b640
Sat 06 May 2023 06:20:58 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3b47552
Sat 06 May 2023 06:21:09 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
250f35a
Sat 06 May 2023 06:24:55 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
007398c
Sat 06 May 2023 06:25:26 AM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|2
total_score: 20/70
0229801
Thu 11 May 2023 11:05:27 PM UTC: 
 heap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  2|2
total_score: 20/70
30978be
Thu 11 May 2023 11:44:43 PM UTC: 
 heap.c | 18 +++++++++++++++---
 1 file changed, 15 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 45/70
fb7716f
Sat 13 May 2023 06:23:39 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  7|1
total_score: 45/70
c249ea7
Sat 13 May 2023 06:24:28 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:56:7: error: unused variable ‘pos’ [-Werror=unused-variable]
   56 |   int pos = 0;
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
2eb4f15
Sat 13 May 2023 06:28:25 PM UTC: 
 heap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  7|1
total_score: 45/70
4b06925
Sat 13 May 2023 06:29:04 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 45/70
6d05e4a
Sat 13 May 2023 06:33:03 PM UTC: 
 heap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:73:14: error: unused variable ‘aux’ [-Werror=unused-variable]
   73 |     heapElem aux = pq->heapArray[pos];
      |              ^~~
cc1: all warnings being treated as errors
Compilation failed
5eb2eb0
Sat 13 May 2023 06:33:14 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:73:14: error: unused variable ‘aux’ [-Werror=unused-variable]
   73 |     heapElem aux = pq->heapArray[hijo];
      |              ^~~
cc1: all warnings being treated as errors
Compilation failed
4720d61
Sat 13 May 2023 06:33:20 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:73:33: error: array subscript is not an integer
   73 |     heapElem aux = pq->heapArray[aux];
      |                                 ^
heap.c:73:14: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   73 |     heapElem aux = pq->heapArray[aux];
      |              ^~~
cc1: all warnings being treated as errors
Compilation failed
6f8e199
Sat 13 May 2023 06:33:25 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:73:14: error: unused variable ‘aux’ [-Werror=unused-variable]
   73 |     heapElem aux = pq->heapArray[pos];
      |              ^~~
cc1: all warnings being treated as errors
Compilation failed
2aa974c
Sat 13 May 2023 06:33:33 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:73:14: error: unused variable ‘aux’ [-Werror=unused-variable]
   73 |     heapElem aux = pq->heapArray[hijo];
      |              ^~~
cc1: all warnings being treated as errors
Compilation failed
a2f9c68
Sat 13 May 2023 06:33:52 PM UTC: 
 heap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:73:14: error: unused variable ‘aux’ [-Werror=unused-variable]
   73 |     heapElem aux = pq->heapArray[pos];
      |              ^~~
cc1: all warnings being treated as errors
Compilation failed
6e1162f
Sat 13 May 2023 06:33:58 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:73:14: error: unused variable ‘aux’ [-Werror=unused-variable]
   73 |     heapElem aux = pq->heapArray[pos];
      |              ^~~
cc1: all warnings being treated as errors
Compilation failed
26ec156
